# daisy_chain

./: README.md  prompt.md
examples/: autoimport.py  collect.py  collect_media.py  copycat.py  copycat_fusion.py  youtube_markers.py
hosts/: DaisyChain.py
js/: client_test.js  client_test_chain.js
js/daisychain/: package-lock.json  package.json
js/daisychain/src/: index.js
js/daisychain/test/: client_test.js  client_test_chain.js  get_resolve_object.test.js
python/: DaisyChain Host.py  daisy_chain_error_log.txt  pyproject.toml  resolve_types.py  setup.py
python/daisychain/: __init__.py  remote.py  resolve.py
python/daisychain.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/daisychain/scripts/: bindive.py  collate.py  copycat.py  credits.py
python/tests/: get_project_name.py  get_version_string.py  import_media.py
